# rust-course-manager-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  courses.json
.github/workflows/: release.yml  rust.yml
cli-app/: Cargo.toml
cli-app/src/: cli.rs  main.rs
course-manager/: Cargo.toml
course-manager-cli/: Cargo.toml
course-manager-cli/src/: cli.rs  main.rs  util.rs
course-manager/src/: courses.rs  db.rs  error.rs  lib.rs  util.rs
migrations/2023-01-29-184548_create_courses_table/: down.sql  up.sql
src/: schema.rs
