[package]
name = "cli-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["color", "derive"] }
course-manager = { path = "../course-manager" }
prettytable = "0.10.0"
serde_json = "1.0.91"
