[package]
name = "cli-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["color", "derive"] }
course-manager = { path = "../course-manager" }
reqwest = { version = "0.11.14", features = ["blocking"] }
serde_json = "1.0.91"
spinoff = "0.7.0"
tabled = { version = "0.10.0", features = ["color"] }
