[package]
name = "course-manager-cli"
version = "0.0.4"
edition = "2021"
description = "A CLI version of course-manager written in Rust"
license = "BSD-3-Clause"
repository = "https://github.com/UNA-OUROBOROS/rust-course-manager-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# set custom binary name
[[bin]]
name = "course-manager"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.1", features = ["color", "derive"] }
course-manager = { path = "../course-manager" }
indoc = "2.0.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde_json = "1.0.91"
spinoff = "0.7.0"
tabled = { version = "0.10.0", features = ["color"] }
