[package]
name = "course-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version="2.0.3", features = ["sqlite"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
dirs = "4.0.0"
figment = { version = "0.10.8", features = ["toml"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
