[package]
name = "course-manager"
version = "0.0.5"
edition = "2021"
description = "Library that contains several utilities for course-manager"
license = "BSD-3-Clause"
repository = "https://github.com/UNA-OUROBOROS/rust-course-manager-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
figment = { version = "0.10.8", features = ["toml"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
